# pngc-training

./: .gitignore  CONTRIBUTING.md  LICENSE  MAINTAINER_GUIDE.md  README.md
.github/: course-discussion-welcome-template.md
.github/ISSUE_TEMPLATE/: config.yml  register-course.yml
.github/binder-templates/: Dockerfile-python  Dockerfile-r  README.md
.github/scripts/: update_courses.py
.github/workflows/: notify_reviewers.yml  update_courses.yml
binder/: Pipfile  requirements.txt
spring_2026_ai_assisted_administrative_tasks/: README.md
spring_2026_ai_assisted_administrative_tasks/custom_gpts/: literature_watch_agent.md  minimal-pubmed-api-spec.json  research_reporting_agent.md
spring_2026_ai_assisted_administrative_tasks/event_flyer_agent/: README.md  agent.py  requirements.txt
spring_2026_ai_assisted_administrative_tasks_transforming_summaries_of_scientific_work/: README.md
spring_2026_ai_assisted_administrative_tasks_transforming_summaries_of_scientific_work/custom_gpts/: literature_watch_agent.md  project_description_rewriter.md  research_reporting_agent.md
spring_2026_ai_assisted_administrative_tasks_transforming_summaries_of_scientific_work/event_flyer_agent/: .gitignore  README.md  agent.py
spring_2026_ai_assisted_coding_and_co_pilot_workflows/: README.md  exercise.md  playground.ipynb
spring_2026_using_alphagenome_introductory_practical_session/: README.md  alphagenome_intro_practical.ipynb  ms4a-region.fasta  pyproject.toml  requirements.txt
spring_2026_using_alphagenome_introductory_practical_session/binder/: README.md  requirements.txt
(+12 files in other folders)
