[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphagenome-notebook-env"
version = "0.1.0"
description = "Environment for AlphaGenome notebook workflows"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "alphagenome",
    "matplotlib",
    "ipywidgets",
    "iprogress",
    "itables",
    "ipykernel"
]